# videoToASCII

./: .gitignore  CMakeLists.txt  README.md  main.cpp  resolution.hpp
headers/: resolution.hpp  utils.hpp
src/: main.cpp  resolution.cpp  utils.cpp
